fixed spacing issue for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,9 @@
   animation: blink 2s infinite;
   transform: rotate(45deg);
 }
+.grid_element{
+  padding-bottom: 1em;
+}
 .skills {
   color: #030303;
   max-width: 100vw;
